--- a/tj2024b_web1/src/main/webapp/WEB-INF/web.xml
+++ b/tj2024b_web1/src/main/webapp/WEB-INF/web.xml
@@ -9,4 +9,16 @@
     <welcome-file>default.jsp</welcome-file>
     <welcome-file>default.htm</welcome-file>
   </welcome-file-list>
+  
+  <servlet>
+  	<servlet-name>example3</servlet-name>
+  	<servlet-class>day01.Example3</servlet-class>
+  </servlet>
+  
+  <servlet-mapping>
+  	<servlet-name>example3</servlet-name>
+  	<url-pattern>/day01/Example3</url-pattern>
+  </servlet-mapping>
+  
+  
 </web-app>
