서블릿 과제

--- a/tj2024b_web1/src/main/webapp/WEB-INF/web.xml
+++ b/tj2024b_web1/src/main/webapp/WEB-INF/web.xml
@@ -10,7 +10,8 @@
     <welcome-file>default.htm</welcome-file>
   </welcome-file-list>
   
-  <servlet>
+  
+    <servlet>
   	<servlet-name>example3</servlet-name>
   	<servlet-class>day01.Example3</servlet-class>
   </servlet>
@@ -18,6 +19,18 @@
   <servlet-mapping>
   	<servlet-name>example3</servlet-name>
   	<url-pattern>/day01/Example3</url-pattern>
+  </servlet-mapping>
+  
+  
+  
+  <servlet>
+  	<servlet-name>task3</servlet-name>
+  	<servlet-class>day01.Task3</servlet-class>
+  </servlet>
+  
+  <servlet-mapping>
+  	<servlet-name>task3</servlet-name>
+  	<url-pattern>/day01/Task3</url-pattern>
   </servlet-mapping>
   
   
