--- a/tj2024b_web1/.classpath
+++ b/tj2024b_web1/.classpath
@@ -18,5 +18,7 @@
 			<attribute name="optional" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/commons-fileupload-1.5.jar"/>
+	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/commons-io-2.18.0.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
