--- a/tj2024b_web1/.classpath
+++ b/tj2024b_web1/.classpath
@@ -24,7 +24,7 @@
 	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/jackson-annotations-2.18.2.jar"/>
 	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/jackson-core-2.18.2.jar"/>
 	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/jackson-databind-2.18.2.jar"/>
-	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/jakartaee-migration-1.0.9-shaded.jar"/>
+	<classpathentry exported="true" kind="lib" path="src/main/webapp/WEB-INF/lib/jakartaee-migration-1.0.9-shaded.jar"/>
 	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/lombok.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
